tests/e2e/not_allowed/case.error
Error: syntax error in story at line 1, column 1

1|    case = 1
      ^^^^

E0030: `case` is reserved for future use
